# react_fastapi_chat

./: README.md
backend/: main.py  pyproject.toml  sock_client.py  sock_server.py
backend/utils/: openai_requests.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Controller.tsx
